style(file): fix white space issue on the right
Merge and fixes #24

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,6 +17,15 @@
   }
 }
 
+.custom-card-height {
+  height: 400px; /* Adjust as needed */
+}
+
+.custom-card-image {
+  width: 100%;
+  height: auto;
+}
+
 /* @layer base {
   input[type='number']::-webkit-outer-spin-button,
   input[type='number']::-webkit-inner-spin-button,
